Development Portal (2019-10-28 shi)
==============================
Sticky headers and counters for tables
Update SAVi with dflat
Add test savi xml for json conversion


Development Portal (2019-10-27 shi)
==============================
Add all elements in org file for SAVi
Update css
Add new test org xml for json conversion
Add base64 sort arrow image for tables
Add counter increment counts to headers


Development Portal (2019-10-26 shi)
==============================
Update org test layout for SAVi


Development Portal (2019-09-5 shi)
==============================
Add beige alert for upload
Update css


Development Portal (2019-08-22 shi)
==============================
Update landing page link
Update css


Development Portal (2019-07-20 shi)
==============================
Add Version 1 banner notice to SAVi
Updated print-friendly css
Add Sector vocab 2 as DAC to SAVi
Add "true" as boolean for humanitarian
Add new iati-codes for import


Development Portal (2019-07-18 shi)
==============================
Sticky labels for D-Portal-Logs


Development Portal (2019-07-11 shi)
==============================
Replace IS with brackets for policy-markers search filter
Updated D-Portal-Logs


Development Portal (2019-03-22 shi)
==============================
Update and fix recipient-region display
Hide empty location points
Update print-friendly css


Development Portal (2019-03-20 shi)
==============================
Display language code of document-links in SAVi
Update print-friendly and inspire css


Development Portal (2019-03-19 shi)
==============================
Update human-scope links as first narrative
Update print-friendly css


Development Portal (2019-03-18 shi)
==============================
Display non-DAC sectors in SAVi
Update print-friendly css
Import sector_vocab in iati_codes.js
Fix close span for non-DAC sector section
Update length of sectors with DAC
Fix padding css for non-DAC sector wrapper
Update non-DAC section display

