@@ -13,7 +13,7 @@ a:active	{text-decoration:none; color:#FFAB5E;}
 .activity:nth-of-type(2)	{display:none;}
 
 .header,
-.header_doc	{font-size:14px; color:#ccc; display:block; border-bottom:1px solid #aaa; padding-bottom:10px; margin-bottom:20px;}
+.header_doc	{font-size:14px; color:#ccc; text-transform:uppercase; display:block; border-bottom:1px solid #aaa; padding-bottom:10px; margin-bottom:20px;}
 .header_doc	{border:0; margin:0;}
 .header_section	{font-size:12px; color:#FFF; background-color:rgba(17,46,105,0.9); padding:10px 40px; margin:30px 0 20px -50px; width:980px; text-transform:uppercase; position:sticky; top:-1px; z-index:1;}
 span.block	{display:block;}
@@ -27,8 +27,11 @@ span.block	{display:block;}
 .wrap_reporting_org div		{display:inline-block; vertical-align:top; padding-right:10px;}
 .wrap_iati_identifier	{background-color:rgba(0,14,32,0.7); width:960px; font-size:18px; line-height:1.5em; padding:20px 40px; color:#FFAB5E; margin:0 auto; margin-left:-40px;}
 .wrap_reporting_org .text,
-.wrap_iati_identifier .text{color:#ccc; text-transform:uppercase; font-size:14px;}
+.wrap_iati_identifier .text		{color:#ccc; text-transform:uppercase; font-size:14px;}
 .wrap_iati_identifier .text a	{font-size:18px; padding-left:5px;}
+.wrap_description			{margin:40px auto;}
+.wrap_description .text		{margin-bottom:30px;}
+.wrap_description .text .narrative:nth-of-type(2)	{font-style:italic; display:block; margin-top:15px;}
 
 .reporting_org .narrative:nth-of-type(2)	{font-style:italic;}
 .data_source a	{display:inline-block; vertical-align:baseline; width:21%; background-color:#24405d99; border-radius:4px; text-align:center; font-size:16px; font-variant:all-small-caps; color:#fff; padding:5px 0; margin:10px 2% 5px 0;}
