@@ -3,6 +3,8 @@ Development Portal (2019-10-28 shi)
 Sticky headers and counters for tables
 Update SAVi with dflat
 Add test savi xml for json conversion
+Add codelist mapping to dflat
+Add title hover text with description
 
 
 Development Portal (2019-10-27 shi)
